// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomPieChart component renders CustomPieChart component correctly 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 400px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts1-clip"
      >
        <rect
          height="390"
          width="390"
          x="5"
          y="5"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      />
    </g>
  </svg>
</div>
`;

exports[`CustomPieChart component renders CustomPieChart component with different dimensions 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 500px; height: 300px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="300"
    style="width: 100%; height: 100%;"
    viewBox="0 0 500 300"
    width="500"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts3-clip"
      >
        <rect
          height="290"
          width="490"
          x="5"
          y="5"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      />
    </g>
  </svg>
</div>
`;
